Add callout to docs that mention Equinox (#1990)
users are sometimes confused about why we tell them to download stuff
from equinox.io so let's add a callout wherever it's mentioned to let
them know what's up.

https://linear.app/ngrok/issue/DOC-411/fix-docs-that-point-to-equinox

<!-- mintlify-editor-comments:start -->
Mintlify
---
0 threads from 0 users in Mintlify

- No unresolved comments
<!-- mintlify-editor-comments:end -->

<!-- mintlify-comment-->

<a
href="https://dashboard.mintlify.com/ngrok/ngrok/editor/sg%2Fdoc-411-fix-docs-that-point-to-equinox?source=pr_comment"
target="_blank" rel="noopener noreferrer"><picture><source
media="(prefers-color-scheme: dark)"
srcset="https://d3gk2c5xim1je2.cloudfront.net/assets/open-mintlify-editor-dark.svg"><source
media="(prefers-color-scheme: light)"
srcset="https://d3gk2c5xim1je2.cloudfront.net/assets/open-mintlify-editor-light.svg"><img
src="https://d3gk2c5xim1je2.cloudfront.net/assets/open-mintlify-editor-light.svg"
alt="Open in Mintlify Editor"></picture></a>

<!-- /mintlify-comment -->

--- a/guides/device-gateway/arm64.mdx
+++ b/guides/device-gateway/arm64.mdx
@@ -31,6 +31,11 @@ To follow this guide, you need:
    wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-arm64.tgz
    ```
 
+   <Note>
+   Equinox is fully owned by ngrok and used exclusively for building and distributing ngrok binaries.
+   See [the FAQ page](/faq#does-ngrok-own-bin-equinox-io) for more details.
+   </Note>
+
 3. Unzip the file and move it to a directory in your `PATH`, like `/usr/local/bin`.
 
    ```bash
