--- a/guides/device-gateway/windows.mdx
+++ b/guides/device-gateway/windows.mdx
@@ -22,6 +22,11 @@ To download and install the ngrok agent on your remote Windows device, follow th
 Invoke-WebRequest -Uri https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok-v3-stable-windows-amd64.zip
 ```
 
+<Note>
+Equinox is fully owned by ngrok and used exclusively for building and distributing ngrok binaries.
+See [the FAQ page](/faq#does-ngrok-own-bin-equinox-io) for more details.
+</Note>
+
 1. Unzip the downloaded file and move it to a directory in your PATH. Below is an example using PowerShell:
 
 ```bash
