--- a/guides/running-behind-firewalls.mdx
+++ b/guides/running-behind-firewalls.mdx
@@ -39,6 +39,11 @@ When working with the network team, you'll want to set up the following exceptio
 - Connect URLs (the default is connect.ngrok-agent.com, but there is one for each region), so that the ngrok agent can connect with ngrok servers
 - The update URL (the default is `update.ngrok-agent.com`), so that the ngrok agent can quickly update itself. Agent versions before `3.36.0` used `update.equinox.io` as the update URL.
 
+<Note>
+Equinox is fully owned by ngrok and used exclusively for building and distributing ngrok binaries.
+See [the FAQ page](/faq#does-ngrok-own-bin-equinox-io) for more details.
+</Note>
+
 Setting up a custom Connect URL can be useful because it ensures that no one can bring their own ngrok account. In this case, the network admins could continue to block traffic to the default Connect URLs and only allow your custom branded Connect URL. For this, you'll need to:
 
 - Set up a [custom Connect URL in your ngrok Dashboard](https://dashboard.ngrok.com/connect-urls)
