--- a/snippets/guides/agent-content.mdx
+++ b/snippets/guides/agent-content.mdx
@@ -264,7 +264,8 @@ The ngrok agent will automatically look for updates when it starts up. This chec
 - `https://update.equinox.io`
 
 <Note>
-Even though the Equinox service was [shut down in 2021](https://equinox.io/blog/shutting-down), it is wholly owned and operated by ngrok, and as such, continues to be used for building and distributing our binaries.
+Equinox is fully owned by ngrok and used exclusively for building and distributing ngrok binaries.
+See [the FAQ page](/faq#does-ngrok-own-bin-equinox-io) for more details.
 </Note>
 
 ### DNS resolution
@@ -433,5 +434,6 @@ each release of the ngrok agent.
 
 ## Pricing
 
-The ngrok agent is available to all ngrok users at no additional charge. You
-only incur costs if the resources provisioned by the agent incur a cost. For more information, see the [ngrok Pricing page](https://ngrok.com/pricing).
+The ngrok agent is available to all ngrok users at no additional charge. 
+You only incur costs if the resources provisioned by the agent incur a cost. 
+For more information, see the [ngrok Pricing page](https://ngrok.com/pricing).
