--- a/guides/device-gateway/raspberry-pi.mdx
+++ b/guides/device-gateway/raspberry-pi.mdx
@@ -22,6 +22,11 @@ To download and install the ngrok agent on your remote Raspberry Pi device, foll
 wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-arm64.tgz
 ```
 
+<Note>
+Equinox is fully owned by ngrok and used exclusively for building and distributing ngrok binaries.
+See [the FAQ page](/faq#does-ngrok-own-bin-equinox-io) for more details.
+</Note>
+
 3. Unzip the downloaded file and move it to a directory in your PATH. Below is an example for `/usr/local/bin`:
 
 ```bash
