Add CI check to scan Traffic Policy code and fix borked snippets (#1992)
https://linear.app/ngrok/issue/DOC-427/expand-ci-checks-to-scan-traffic-policy-code-snippets

--- a/snippets/traffic-policy/gallery/route-requests/BasedOnUrl.mdx
+++ b/snippets/traffic-policy/gallery/route-requests/BasedOnUrl.mdx
@@ -5,9 +5,9 @@
 on_http_request:
   - name: "Route requests based on URL"
     actions:
-    - type: "forward-internal"
-    config:
-    url: "https://${req.host.split(".example.com")[0]}.internal"
+      - type: "forward-internal"
+        config:
+          url: "https://${req.host.split(\".example.com\")[0]}.internal"
 ```
 ```json policy.json
 {
