--- a/traffic-policy/actions/add-headers.mdx
+++ b/traffic-policy/actions/add-headers.mdx
@@ -137,7 +137,7 @@ configuration will add headers to the response from the upstream service when th
 ```yaml policy.yml highlight={3}
 on_http_response:
   - expressions:
-      - "req.method == "GET" && req.url.path.startsWith("/status/200")"
+      - "req.method == \"GET\" && req.url.path.startsWith(\"/status/200\")"
     actions:
       - type: "add-headers"
         config:
