--- a/traffic-policy/concepts/expressions.mdx
+++ b/traffic-policy/concepts/expressions.mdx
@@ -89,7 +89,7 @@ You must wrap expressions containing `!` in quotes for them to be parsed correct
 ```yaml
 on_tcp_connect:
   - expressions:
-      - !(conn.client_ip in ['2001:4860:7:f0e::f4', '98.35.32.113'])
+      - "!(conn.client_ip in ['2001:4860:7:f0e::f4', '98.35.32.113'])"
     actions:
       - type: deny
 ```
