--- a/traffic-policy/examples/block-unwanted-requests.mdx
+++ b/traffic-policy/examples/block-unwanted-requests.mdx
@@ -129,7 +129,7 @@ on_http_request:
       - type: custom-response
         config:
           status_code: 200
-          body: User-agent: ChatGPT-User\r\nDisallow: /
+          body: "User-agent: ChatGPT-User\r\nDisallow: /"
           headers:
             content-type: text/plain
 ```
@@ -259,7 +259,7 @@ This rule sends a custom response with status code `401` and body `Unauthorized`
 ```yaml policy.yml
 on_http_request:
   - expressions:
-      - !('authorization' in req.headers)
+      - "!('authorization' in req.headers)"
     actions:
       - type: custom-response
         config:
@@ -308,7 +308,7 @@ on_http_request:
       - type: custom-response
         config:
           status_code: 401
-          body: Unauthorized request due to country of origin.
+          body: "Unauthorized request due to country of origin."
 ```
 
 ```json policy.json
@@ -355,7 +355,7 @@ on_http_request:
       - type: custom-response
         config:
           status_code: 400
-          body: Error: You can't upload content larger than 1MB.
+          body: "Error: You can't upload content larger than 1MB."
 ```
 
 ```json policy.json
@@ -392,7 +392,7 @@ In this example, the Algolia web crawler is exempted from any rate limiting conf
 ```yaml policy.yml
 on_http_request:
   - expressions:
-      - !('com.algolia.crawler' in conn.client_ip.categories)
+      - "!('com.algolia.crawler' in conn.client_ip.categories)"
     actions:
       - type: rate-limit
         config:
