--- a/traffic-policy/getting-started/agent-endpoints/config-file.mdx
+++ b/traffic-policy/getting-started/agent-endpoints/config-file.mdx
@@ -33,7 +33,7 @@ endpoints:
             - type: custom-response
               config:
                 status_code: 200
-                body: Hello, World!
+                body: "Hello, World!"
 ```
 
 This policy will respond to each HTTP request with “Hello, World!"
