--- a/universal-gateway/cloud-endpoints/routing-and-policy-decentralization.mdx
+++ b/universal-gateway/cloud-endpoints/routing-and-policy-decentralization.mdx
@@ -45,20 +45,19 @@ Use a Traffic Policy to simulate accessing an API endpoint.
 
 ```yaml policy.yml
 on_http_request:
-- expressions:
-  - "!(hasReqHeader('Api-Key'))"
-  actions:
-  - type: deny
-    config:
-      status_code: 404
-- actions:
-  - type: custom-response
-    config:
-      status_code: 200
-      body: "<html><body><h1>Hello world</h1><p>The quick brown fox jumps over the
-        lazy dog.</p></body></html>"
-      headers:
-        content-type: text/html
+  - expressions:
+      - "!(hasReqHeader('Api-Key'))"
+    actions:
+      - type: deny
+        config:
+          status_code: 404
+  - actions:
+      - type: custom-response
+        config:
+          status_code: 200
+          body: "<html><body><h1>Hello world</h1><p>The quick brown fox jumps over the lazy dog.</p></body></html>"
+          headers:
+            content-type: text/html
 ```
 
 ```json policy.json
